--- a/app/src/main/res/layout/popular_categories_item.xml
+++ b/app/src/main/res/layout/popular_categories_item.xml
@@ -8,10 +8,16 @@
         android:id="@+id/videoView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />-->
-    <TextureView
+    <!--<TextureView
         android:id="@+id/textureView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" />-->
+
+    <FrameLayout
+        android:id="@+id/video_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/background_dark"/>
 
     <!--<com.google.android.exoplayer2.ui.SimpleExoPlayerView android:id="@+id/player_view"
         android:focusable="true"
