--- a/app/src/main/res/layout/popular_categories_item.xml
+++ b/app/src/main/res/layout/popular_categories_item.xml
@@ -13,11 +13,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />-->
 
-    <FrameLayout
+    <!--<FrameLayout
         android:id="@+id/video_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/background_dark"/>
+        android:background="@android:color/background_dark"/>-->
+
+    <jp.satorufujiwara.player.VideoTextureView
+        android:id="@+id/videoTextureView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <!--<com.google.android.exoplayer2.ui.SimpleExoPlayerView android:id="@+id/player_view"
         android:focusable="true"
